--- a/interface/client/index.html
+++ b/interface/client/index.html
@@ -88,7 +88,7 @@
                         </button>
                         <!-- <button id="importdata"> <img src="./assets/images/export.png" alt="..." width="14px"> Import Data </button> -->
                         <button> <img src="./assets/images/reset.png" alt="..." width="14px"> Reset </button>
-                        <button> <img src="./assets/images/back.png" alt="..." width="14px"> Cancel </button>
+                        <button> <img src="./assets/images/back.png" alt="..." width="14px"> Rollback </button>
                         <button> <img src="./assets/images/import.png" alt="" width="20px"> Export Charts </button>
                     </div>
                 </div>
@@ -104,19 +104,34 @@
                     <table class="compact hover cell-border nowrap"></table>
                 </div>
             </div> -->
-            <div id="panel3">
+            <!-- <div id="panel3">
                 <span class="panel-header">Recommendation</span>
-                <!-- <div id="search-view">
+                <div id="search-view">
                     <input class="search-input" id="search-input" />
                     <button class="search-button" id="search-button"> BUTTON </button>
-                </div> -->
+                </div>
                 <div id="suggestionview"></div>
-                <!-- <div id="suggestionview"></div> -->
-            </div>
+            </div> -->
+            <!-- 2023/4/28 -->
+            <!-- <div id="panel3">
+                <span class="panel-header">Recommendation</span>
+                
+                <div id="suggestionview"></div>
+            </div> -->
             <!-- <div id="panel4">
                 <span class="panel-header">Charts</span>
                 <div id="allchartsview"></div>
             </div> -->
+            <div id="panel5">
+                <span class="panel-header">Exporation Goals</span>
+                <div id="goals">
+                    <div id="goalsexplain">
+                    </div>
+                    <div id="goalinput">
+                        <input type="text" name="" id="" placeholder="Add Goals..."><button> <img src="./assets/images/edit.png" alt="..." width="18px"> Add </button>
+                    </div>
+                </div>
+            </div>
         </div>
         <div id="tooltip">
             <div class="chartcontainer"></div>
