--- a/interface/client/index.html
+++ b/interface/client/index.html
@@ -128,7 +128,8 @@
                     <div id="goalsexplain">
                     </div>
                     <div id="goalinput">
-                        <input type="text" name="" id="" placeholder="Add Goals..."><button> <img src="./assets/images/edit.png" alt="..." width="18px"> Add </button>
+                        <input type="text" name="" id="goalTitle" placeholder="Add Goals..."><button id="addgoal"> <img src="./assets/images/edit.png" alt="..." width="18px"> Add </button>
+                        <button id="submit"> Submit </button>
                     </div>
                 </div>
             </div>
