--- a/interface/client/index.html
+++ b/interface/client/index.html
@@ -25,7 +25,7 @@
                     <div class="chartcontainer"></div>
                     <span class="chartlabel"></span>
                     <span class="editorbuttons">
-                        <input type="text" placeholder="Modify Chart"><button id="refine"> <img src="./assets/images/edit.png" alt="..." width="12px"> Refine </button>
+                        <input type="text" placeholder="Modify Chart" id="refinecontent"><button id="refine"> <img src="./assets/images/edit.png" alt="..." width="12px"> Refine </button>
                     </span>
                     <!-- <span class="editorbuttons">
                         <button id="add" style="color:#28a745">Add</button>
@@ -35,15 +35,12 @@
                 </div>
                 <div id="charteditor">
                     <div id="chartediterdesc">
-                        <div class="title"> What is the relationship between Housepower and Weight_i_lbs? </div>
-                        <div class="content"> This visualization will help us understand the relationship between the power of the engine and the weight of the car.We can see if ...
-                            This visualization will help us understand the relationship between the power of the engine and the weight of the car.We can see if ...
-                            This visualization will help us understand the relationship between the power of the engine and the weight of the car.We can see if ...
-                            This visualization will help us understand the relationship between the power of the engine and the weight of the car.We can see if ... </div>
+                        <div class="title">  </div>
+                        <div class="content"> </div>
                     </div>
                 </div>
                 <div id="chartcode">
-                    <!-- <div id="editorcontainer"></div> -->
+                    <div id="editorcontainer"></div>
                 </div>
                 <!-- <div id="charteditor">
                     <div id="chartcomposer">
