--- a/interface/client/index.html
+++ b/interface/client/index.html
@@ -78,6 +78,12 @@
                     <div id="geninput">
                         <input type="text" name="" id="" placeholder="What is the distribution of Miles_per_Gallon?"><button> <img src="./assets/images/find.png" alt="..." width="18px"> generate </button>
                     </div>
+                    <div id="coordinate" >
+                        <span class="coordinatetitle">X-coordinate:</span>
+                        <span id="xvalue" class="coordinatevalue"></span>
+                        <span class="coordinatetitle">Y-coordinate:</span>
+                        <span id="yvalue" class="coordinatevalue"></span>
+                    </div>
                     <div id="genbuttons">
                         <button style="position: relative;"> 
                             <img src="./assets/images/export.png" alt="..." width="14px"> Import Data 
