--- a/interface/client/index.html
+++ b/interface/client/index.html
@@ -12,6 +12,18 @@
         <script type="text/javascript" src="//cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
     </head>
     <body>
+        <div id="myModal" class="modal">
+            <div class="modal-content modal-normal">
+                <div class="modalheader">
+                    <span class="close">&times;</span>
+                    <h3>Exports Charts</h3>
+                </div>
+                <div class="modalbody">
+                    <div id="exportallcharts">
+                    </div>
+                </div>
+            </div>
+        </div>
         
         <!-- <svg t="1717506715612" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="4315" width="50" height="50">
             <path d="M521.37 840.5c-182.82 0-331.54-148.72-331.54-331.54s148.72-331.54 331.54-331.54 331.54 148.72 331.54 331.54S704.19 840.5 521.37 840.5z m0-612.08c-154.69 0-280.54 125.85-280.54 280.54S366.68 789.5 521.37 789.5s280.54-125.85 280.54-280.54-125.85-280.54-280.54-280.54z" fill="#424244" p-id="4316"></path>
@@ -210,7 +222,7 @@
             <div class="chartcontainer"></div>
             <span class="chartlabel"></span>
         </div>
-        <div id="dialog" class="modal">
+        <!-- <div id="dialog" class="modal">
             <div class="modal-content">
                 <span class="close">&times;</span>
                 <label for="myfile">Select a file:</label>
@@ -229,6 +241,6 @@
             </div>
           
           </div>
-        <div id="vegatest" style="visibility:hidden;"></div>
+        <div id="vegatest" style="visibility:hidden;"></div> -->
     </body>    
 </html>
