--- a/interface/client/index.html
+++ b/interface/client/index.html
@@ -16,7 +16,7 @@
             <div class="modal-content modal-normal">
                 <div class="modalheader">
                     <span class="close">&times;</span>
-                    <h3>Exports Charts</h3>
+                    <h3>Export Charts</h3>
                 </div>
                 <div class="modalbody">
                     <div id="exportallcharts">
