--- a/interface/client/index.html
+++ b/interface/client/index.html
@@ -118,8 +118,8 @@
                     </div>
                 </div>
                 <div id="sumview">
-                    <img id="miaozhun" src="./assets/images/miaozhun.png" alt="">
-                    <img id="dingwei" src="./assets/images/dingwei.png" alt="">
+                    <!-- <img id="miaozhun" src="./assets/images/miaozhun.png" alt=""> -->
+                    <!-- <img id="dingwei" src="./assets/images/dingwei.png" alt=""> -->
                 </div>
                 <span id="datsetspan" class="panel-header">Dateset</span>
                 <div id="dataview">
