--- a/interface/client/index.html
+++ b/interface/client/index.html
@@ -98,7 +98,7 @@
                 </span>
                 <div id="genprocess">
                     <div id="geninput">
-                        <input type="text" name="" id="" placeholder="What is the distribution of Miles_per_Gallon?"><button> <img src="./assets/images/find.png" alt="..." width="18px"> generate </button>
+                        <input type="text" name="" id="" placeholder="What is the distribution of Miles_per_Gallon?"><button id="gencharts"> <img src="./assets/images/find.png" alt="..." width="18px"> generate </button>
                     </div>
                     <div id="coordinate" >
                         <span class="coordinatetitle">X-coordinate:</span>
